# oxide

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  setup.sh
.github/workflows/: rust.yml
benchmarking/: main.py  readme.md
examples/: binary_logistic_regression.rs  iris.rs  titanic.rs
src/: base.rs  lib.rs  utils.rs
src/activations/: mod.rs  relu.rs  sigmoid.rs  softmax.rs
src/datasets/: datasets.rs  mod.rs
src/datasets/data/: bc_test_data_test.csv  bc_test_data_train.csv  iris.csv
src/ensemble_model/: mod.rs
src/linear_model/: mod.rs
src/linear_model/classifiers/: logistic_regresion.rs  mod.rs
src/linear_model/linear_classifiers/: logistic_regression.rs  mod.rs
src/loss/: binary_cross_entropy.rs  categorical_cross_entropy.rs  mod.rs  mse.rs
src/metrics/: accuracy.rs  confusion_matrix.rs  f1_precision_recall.rs  mod.rs
src/preprocessing/: mod.rs  one_hot_encode.rs  oxide_dataset.rs  scalers.rs
