[package]
name = "oxide"
crate-type = ["staticlib"]
version = "0.1.0"
description = "Simple, high-performance ML for rust"
license = "MIT License"
readme = "README.md"
repository = "https://github.com/benjaminjellis/oxide"
authors = ["benjamin ellis <benjaminjellis@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayfire = "3.8"